--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 
 <head>
-	<link href="style.css" rel="stylesheet"> 
-	<title>About Dustin</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<!--FONTS-->
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
+
+	<title>@dustin520</title> 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" type="text/javascript"><!--mce:0--></script>
 	<script> 
@@ -17,58 +23,91 @@
 
 </head>
 
+<nav>
+	<img id="icon" src="http://i.imgur.com/8O9nF2z.jpg" alt="name icon" height="47px" weight="47px">
+	<ul>
+		<li><a class="navpad" href="#about">about me</a></li>
+		<li><a class="navpad" href="#background">background</a></li>
+		<li><a class="navpad" href="#exp">experience</a></li>
+		<li><a class="navpad" href="#future">future</a></li>
+		<li><a class="navpad" href="#contact">contact me</a></li>
+	</ul>
+</nav> 
+
 <body>
 <header>
-	<h2>In the life of..</h2>
-	<h1>Dustin Yu</h1> 
-<div class="bridge">
-	<img src="http://i.imgur.com/2rtVV8q.jpg">
-	<figcaption>Golden Gate Bridge</figcaption> 
-</div>
-</header>
+	<div id="TRpic">
+		<img id="knob" src="http://i.imgur.com/IMhT6JL.jpg" alt="knob" width="40%" height="40%">
+		<figcaption id="welcome">Come on in!</figcapiton> 
+	</div>
+	<div class="intro">
+		<h1 id="about">about me</h1>
+		<h2>my name is <strong><u>Dustin Yu</u></strong> and I am a...</h2>
+		<h3><i>SoCal transplant, foodie, fitness junkie, tech enthusiast and a "super" beginner coder</i></h3> 
+	</div>
+</header> 
+<img id="skydive" src="http://i.imgur.com/ONb24kA.jpg" alt="skydive">
+<br> 
+<hr>
+<article id="background"><h2>Background</h2>
+	<section class="bkgleft"><h3>education</h3>
+		<p class="myLife">I graduated from UC Davis a few years ago with an Economics degree while also minoring in Pyschology and Communications. I really enjoyed my time there and Davis is the reason I had the chance to visit SF, and thus leading me to where I am now.</p> 
+	</section>
+	<section class="bkgcenter1"><h3>work</h3>
+		<p class="myLife">Upon graduation, I've had the chance to work in a few different fields comprosed of various job descriptions. I dipped my toes in Accounting, Operations, and Marketing. Currently, I work in Operations for a startup freight company specialized in shipping wine. However, it was in one of those roles, working for a Productivity App Startup that I realized my interest in the Tech Industry.</p>
+	</section>
+	<section class="bkgcenter2">
+		<h3>hobbies</h3>
+		<ol class="myLife">
+			<li>Rock Climbing</li>
+			<li>Playing tennis</li>
+			<li>Exploring new cities and trying all food</li>
+		</ol>
+	<section class="bkgright">
+		<h3>interests</h3>
+		<ul class="myLife">
+			<li>Fitness</li>
+			<li>Travel and Culture</li>
+			<li>Technology and Consumer Electronics</li>
+		</ul>
+</article>
+<hr>
+<article id="exp">
+	<div class="expformat">	
+		<h2>Experience</h2>
+		<h3>WebDev Experience</h3>
+	</div>	
+			<p>If I had to classify myself based on my knowledge and experience in web development and programming, my level would be "Neanderthal." I am quite the beginner although I did try some Python in an Intro to Computers course I took in college. Aside from that, I have been researching sources online like Codecademy. However, my interest is only rising and I've already had so much fun with DASH and in creating this webpage that I believe I've already learned a great deal!</p> 
+</article>
+<hr>
+<article id="future">
+	<div class="futformat">
+		<h2>Future</h2>
+		<h3>...only time will tell</h3>
+	</div>	
+			<p>Since graduating and after entering the work force, I grew to learn a lot more about myself including what I enjoy doing and what I plan and would like to do with my life. In that, I see my future entailing web design, web development, app development, and more. I have a huge interest in software and technology and plan to incorporate that in my career path and believe that General Assembly can be the first major stepping stone.</p> 
+</article> 
+<hr>
+<section id="bottom">
+<div id="contact">
+	<img id="profile" src="http://i.imgur.com/li5ETa1.jpg" alt="profile pic" width="200px" height="200px">
+	<figcaption>Thanks for visiting!</figcaption>
+	<h4>Contact Info</h4>
+	<p>Dustin Yu<br>c: 818.987.7898<br>e: dustin520@gmail.com</p>
+</div> 
 
 <div id="carousel">
 <ul>
-	<li><img src="http://i.imgur.com/JuFc4K6.jpg"></li>
-	<li><img src="http://i.imgur.com/2qZuQNa.jpg"></li> 
-	<li><img src="http://i.imgur.com/KmXZRfQ.jpg"></li> 
+	<li><img src="http://i.imgur.com/JuFc4K6.jpg" alt="time jump"></li>
+	<li><img src="http://i.imgur.com/2qZuQNa.jpg" alt="ocean beach"></li> 
+	<li><img src="http://i.imgur.com/KmXZRfQ.jpg" alt="fishing"></li>
+	<li><img src="http://i.imgur.com/iHv97WN.jpg" alt="in the snow"></li> 
 </ul>
 </div> 
+</section> 
 
-<div class="background">
-<h3>My Background</h3>
-<p>Born and raised in Southern California. I went to school at the University of California, Davis and studied Economics. Upon graduating I worked for a couple years in Los Angeles only to move to San Francisco in May 2013. Since then, I have been working in Accounting and Operations. On my offtime I enjoy:</p>
-<ul>
-	<li>Sports and Outdoor Activities</li>
-	<li>Exploring the Bay Area</li>
-	<li>Trying out new foods and experiencing different cultures</li>
-</ul>
-<h3>Experience with Web Development</h3>
-<p>Prior to coding in Dash, I have not had any experience with web development. I had the opportunity to dab my toes in some Python for a computer class back in college but that's as far as it goes. However, from completing the tutorials and creating this page, I have already learned a great amount and of the power to create that we have at our fingertips. However, I have and am running into some roadblocks including the following which I am working on</p>
-<ul>
-	<li>Positioning and Sizing Images</li>
-	<li>Coding in Javascript to create a carousel</li>
-	<li>Polishing this page to look pretty</li>
-</ul>
-</div>
-
-<div class="skydive">
-	<img src="http://i.imgur.com/ONb24kA.jpg" width="225" height="375">
-</div>
+<footer></footer> 
+</body> 
 
 
-<div class="contact">
-<h3>Contact Info</h3>
-<p> Dustin Yu <br /> San Francisco, CA <br /> P: 818.987.7898<br /> E: dustin520@gmail.com</p>
-</div>
-
-<div class="rock">
-	<img src="http://i.imgur.com/3Z6InDS.gif" width="70%" height=70%">
-	<figcaption>New Hobbies</figcaption> 
-</div>
-
-
-</body>
-
-
-</html> 
+</html>
