--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 
 	<title>@dustin520</title> 
 
@@ -95,6 +96,7 @@
 	<h4>Contact Info</h4>
 	<p>Dustin Yu<br>c: 818.987.7898<br>e: dustin520@gmail.com</p>
 </div> 
+</section> 
 
 <div id="carousel">
 <ul>
